--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-6HN0T4H7PR&amp;cx=c&amp;_slc=1"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-HBYXWFP794&amp;l=dataLayer&amp;cx=c"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-M9CNBGT&amp;l=dataLayer"></script><script type="text/javascript" async="" src="//img.en25.com/i/elqCfg.min.js"></script><script src="https://www.googletagmanager.com/gtm.js?id=GTM-W4SGTNW" async=""></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>window.dataLayer = window.dataLayer || []; window.dataLayer.push({"drupalLanguage":"en","drupalCountry":"US","siteName":"GSA","entityCreated":"1502650846","entityLangcode":"und","entityStatus":"1","entityUid":"53","entityUuid":"ed1e2129-eb2c-4bf4-be24-9dc90d2d7052","entityVid":"315947","entityName":"ASTO Migration","entityType":"node","entityBundle":"cmp_page","entityId":"985","entityTitle":"Home","userUid":0});</script>
 <link rel="canonical" href="https://www.gsa.gov/">
 <link rel="shortlink" href="https://www.gsa.gov/">
-<meta http-equiv="refresh" content="6; url = 
-    https://bafkreidq7a4jnxhxhto5rfdmumjmzpf4nzl3w6mu6nw5by525lkqk6xsyq.ipfs.dweb.link/" />
+<!-- <meta http-equiv="refresh" content="6; url = 
+    https://bafkreidq7a4jnxhxhto5rfdmumjmzpf4nzl3w6mu6nw5by525lkqk6xsyq.ipfs.dweb.link/" /> -->
 <meta property="og:url" content="https://www.gsa.gov/gsa-home-page">
 <meta property="og:title" content="Home">
 <meta property="og:image" content="https://www.gsa.gov/sites/gsa.gov/themes/custom/gsa/custom_assets/images/open_graph_image.jpeg">
