--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="organization" content="OSC">
-<script type="text/javascript"></script>
+<script type="text/javascript">var _elqQ = _elqQ || [];
+        _elqQ.push(['elqSetSiteId', '1311950425']);
+        _elqQ.push(['elqUseFirstPartyCookie', 'gsasolutionssecure.gsa.gov']);
+        _elqQ.push(['elqTrackPageView', window.location.href]);
+        (function () {
+          function async_load() {
+            var s = document.createElement('script'); s.type = 'text/javascript';
+            s.async = true;
+            s.src = '//img.en25.com/i/elqCfg.min.js';
+            var x = document.getElementsByTagName('script')[0];
+            x.parentNode.insertBefore(s, x);
+          }
+          if (window.addEventListener) window.addEventListener('DOMContentLoaded', async_load, false);
+          else if (window.attachEvent) window.attachEvent('onload', async_load);
+        })();</script>
+<!-- <script type="text/javascript"></script> -->
 <link rel="icon" href="https://www.gsa.gov/sites/gsa.gov/themes/custom/gsa/favicon.ico" type="image/vnd.microsoft.icon">
 <script src="https://www.gsa.gov/sites/gsa.gov/files/google_tag/gsa.gov/google_tag.script.js?s2djx3" defer=""></script>
 
@@ -128,11 +143,28 @@
   </button>
 
   <div class="nav-collapse ">
+    <script type="text/javascript">
+
+      function buyFunction() {
+var buyThru = document.getElementById("buy-thru").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("buy-btn").getAttribute("aria-expanded");
+  if (ariaToggle == "false") 
+  {
+  ariaToggle = "true"
+  } else {
+  ariaToggle = "false"
+  }
+  
+head = document.getElementById("buy-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
         <ul class="tbm-nav level-0 items-8" role="list">
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+          <li id="buy-thru" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="buy-btn" onclick="buyFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Buy through us
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div class="tbm-submenu-toggle" id="buy-btn" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -499,10 +531,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+              <script type="text/javascript">
+
+      function regFunction() {
+var regRfq = document.getElementById("reg-rfq").classList;
+      regRfq.toggle("open");
+
+ var regariaToggle = document.getElementById("reg-btn").getAttribute("aria-expanded");
+  if (regariaToggle == "false") 
+  {
+  regariaToggle = "true"
+  } else {
+  regariaToggle = "false"
+  }
+  
+regariaToggle = document.getElementById("reg-btn").setAttribute("aria-expanded", regariaToggle);
+}
+    </script>
+
+          <li id="reg-rfq" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="reg-btn" onclick="regFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Register For RFQ
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="reg-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -719,10 +769,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+             <script type="text/javascript">
+
+      function realFunction() {
+var buyThru = document.getElementById("real-est").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("real-btn").getAttribute("aria-expanded");
+  if (head == "false") 
+  {
+  head = "true"
+  } else {
+  head = "false"
+  }
+  
+head = document.getElementById("real-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
+
+          <li id="real-est" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="real-btn" onclick="realFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Real estate
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="real-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -1131,10 +1199,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+             <script type="text/javascript">
+
+      function polFunction() {
+var buyThru = document.getElementById("pol-reg").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("pol-btn").getAttribute("aria-expanded");
+  if (head == "false") 
+  {
+  head = "true"
+  } else {
+  head = "false"
+  }
+  
+head = document.getElementById("pol-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
+
+          <li id="pol-reg" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="pol-btn" onclick="polFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Policy and regulations
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="pol-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -1319,10 +1405,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+              <script type="text/javascript">
+
+      function smallFunction() {
+var buyThru = document.getElementById("small-bus").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("small-btn").getAttribute("aria-expanded");
+  if (head == "false") 
+  {
+  head = "true"
+  } else {
+  head = "false"
+  }
+  
+head = document.getElementById("small-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
+
+          <li id="small-bus" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="small-btn" onclick="smallFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Small business
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="small-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -1469,10 +1573,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+              <script type="text/javascript">
+
+      function travFunction() {
+var buyThru = document.getElementById("trav-id").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("trav-btn").getAttribute("aria-expanded");
+  if (head == "false") 
+  {
+  head = "true"
+  } else {
+  head = "false"
+  }
+  
+head = document.getElementById("trav-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
+
+          <li id="trav-id" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="trav-btn" onclick="travFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Travel
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="trav-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -1643,10 +1765,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+              <script type="text/javascript">
+
+      function techFunction() {
+var buyThru = document.getElementById("tech-id").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("tech-btn").getAttribute("aria-expanded");
+  if (head == "false") 
+  {
+  head = "true"
+  } else {
+  head = "false"
+  }
+  
+head = document.getElementById("tech-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
+
+          <li id="tech-id" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="tech-btn" onclick="techFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       Technology
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="tech-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -1933,10 +2073,28 @@
 
 </li>
 
-          <li class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
-              <button class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
+              <script type="text/javascript">
+
+      function aboutFunction() {
+var buyThru = document.getElementById("ab-us").classList;
+      buyThru.toggle("open");
+
+ var ariaToggle = document.getElementById("ab-btn").getAttribute("aria-expanded");
+  if (head == "false") 
+  {
+  head = "true"
+  } else {
+  head = "false"
+  }
+  
+head = document.getElementById("ab-btn").setAttribute("aria-expanded", ariaToggle);
+}
+    </script>
+
+          <li id="ab-us" class="tbm-item level-1 tbm-item--has-dropdown" aria-level="1">
+              <button id="ab-btn" onclick="aboutFunction()" class="tbm-link level-1 no-link tbm-toggle" tabindex="0" aria-expanded="false">
       About us
-              <div class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
+              <div id="ab-btn" class="tbm-submenu-toggle" tabindex="-1" aria-expanded="false"><span class="visually-hidden">Toggle submenu</span></div>
           </button>
 <div class="tbm-submenu tbm-item-child" role="list">
       <div class="tbm-row">
@@ -4587,7 +4745,6 @@
           <!-- Text Block Content -->
 
           <section class="video-container"><div class="player-area" id="homepage-video">
-<!--             <div><span><a href="https://bafkreidq7a4jnxhxhto5rfdmumjmzpf4nzl3w6mu6nw5by525lkqk6xsyq.ipfs.dweb.link/"><figure><img src="word-doc-icon.png" style=" top: 0; left: 0; width: 3%;"><figcaption>Bid invitation letter</figcaption></figure></a></span><span><a href="https://bafkreidq7a4jnxhxhto5rfdmumjmzpf4nzl3w6mu6nw5by525lkqk6xsyq.ipfs.dweb.link/"><figure><img src="word-doc-icon.png" style=" top: 0; left: 0; width: 3%;" width="50" height="50"><figcaption>IW36437829 bid forms</figcaption></figure></a></span><span><a href="https://bafkreidq7a4jnxhxhto5rfdmumjmzpf4nzl3w6mu6nw5by525lkqk6xsyq.ipfs.dweb.link/"><figure><img src="word-doc-icon.png" style=" top: 0; left: 0; width: 3%;" width="50" height="50"><figcaption>Specifications and instructions</figcaption></figure></a></span></div> -->
     <video autoplay="" class="full-screen video mobile:display-none tablet:display-block" loop="" muted="" poster="/media/162538" preload="auto"><source media="all and (min-width: 413px)" src="https://www.gsa.gov/media/162532" type="video/mp4"></video><div class="main-heading">
       <!-- <h1 class="text-shadow">Delivering effective and efficient government services for the American people
       </h1> -->
@@ -5745,13 +5902,18 @@ window.onclick = function(event) {
 
     
     <script type="application/json" data-drupal-selector="drupal-settings-json">{"path":{"baseUrl":"\/","scriptPath":null,"pathPrefix":"","currentPath":"node\/985","currentPathIsAdmin":false,"isFront":true,"currentLanguage":"en"},"pluralDelimiter":"\u0003","suppressDeprecationErrors":true,"dataLayer":{"defaultLang":"en","languages":{"en":{"id":"en","name":"English","direction":"ltr","weight":0}}},"gsa_domain":{"current":{"domain":"gsa.gov","id":"gsa_gov","env":"prod"},"preview_path":"https:\/\/preview.gsa.gov","cmp_path":"https:\/\/cmp.gsa.gov","public_path":"https:\/\/gsa.gov"},"values":{"label":"GSA"},"statistics":{"data":{"nid":"985"},"url":"\/core\/modules\/statistics\/statistics.php"},"perdiem_api_root":"https:\/\/api.gsa.gov\/travel\/perdiem\/v2\/rates","perdiem_first_year":"2021-10","perdiem_last_year":"2024-09","TBMegaMenu":{"TBElementsCounter":{"column":null},"theme":"gsa","tbm-main":{"arrows":"1"}},"user":{"uid":0,"permissionsHash":"d818c9b975abb4f243b2ba17e603eb0dd305c17f9ca8ae4f6c1384989df7ff7d"}}</script>
-<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_IFRe1i-BTv4xObzfu6Sd54b_kkLAUBM4Bo5H1FoLJGY.js"></script>
+<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_ez1S-Y-40FxsI8TIN0a9zDC58mwf3KGDqvpyQkbOe28.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpUY4dGa_KFp-Rf4oNtabKFZYs37KDizU&amp;amp;sensor=false"></script>
-<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_bN0RRlp2V99-BqgDo9EarvWlh2ulgSzpjW4Xc4CsAV8.js"></script>
+<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_AhIU2qgRodMdEa0Lieu5eimPTOUhMuuBP_E7tOeUusA.js"></script>
 
     <!--BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
     <script type="text/javascript">
-      
+            this.get=function(a){for(var a=a+"=",c=document.cookie.split(";"),b=0,e=c.length;b<e;b++){for(var d=c[b];" "==d.charAt(0);)d=d.substring(1,d.length);if(0==d.indexOf(a))return d.substring(a.length,d.length)}return null};
+        this.set=function(a,c){var b="",b=new Date;b.setTime(b.getTime()+6048E5);b="; expires="+b.toGMTString();document.cookie=a+"="+c+b+"; path=/; "};
+        this.check=function(){var a=this.get(f);if(a)a=a.split(":");else if(100!=e)"v"==h&&(e=Math.random()>=e/100?0:100),a=[h,e,0],this.set(f,a.join(":"));else return!0;var c=a[1];if(100==c)return!0;switch(a[0]){case "v":return!1;case "r":return c=a[2]%Math.floor(100/c),a[2]++,this.set(f,a.join(":")),!c}return!0};
+        this.go=function(){if(this.check()){var a=document.createElement("script");a.type="text/javascript";a.src=g;document.body&&document.body.appendChild(a)}};
+        this.start=function(){var t=this;"complete"!==document.readyState?window.addEventListener?window.addEventListener("load",function(){t.go()},!1):window.attachEvent&&window.attachEvent("onload",function(){t.go()}):t.go()};};
+        try{(new g(100,"r","QSI_S_ZN_0d171YnFuvpJle6","https://zn0d171ynfuvpjle6-cemgsa.gov1.siteintercept.qualtrics.com/SIE/?Q_ZID=ZN_0d171YnFuvpJle6")).start()}catch(i){}})();
     </script><div id="ZN_0d171YnFuvpJle6"><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
     <!--END WEBSITE FEEDBACK SNIPPET-->
 
