--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 <script src="https://www.gsa.gov/sites/gsa.gov/files/google_tag/gsa.gov/google_tag.script.js?s2djx3" defer=""></script>
 
     <title>Home | GSA</title>
+    <link rel="stylesheet" media="all" href="/sites/gsa.gov/files/css/css_I8eMn8jpJhSrO0ju5iXKBz-jYttn_-gCLF14QGryT78.css?delta=0&amp;language=en&amp;theme=gsa&amp;include=eJx9kVtyQiEMhjdEZUlMgIipcMKQHPW4-iJ4q53pCyQfufEngkKGDZv1eIATcRMjmygW60HQrHKOYsd5t2NbK2QTMohsM-huFxSBhGICN7QLtwKZrmiSgI1QnTYIR1rSALXRotiMcqXgas9zYRXlQldQ4kUsLaROQqOqIyNl9pC_JulNSrUFKCvv6fJeZs_cC9t5uUy-QdtMYk4ZnUKySctvF9Knv4NvuBjRPooohcevdy9iKjRIDerh-fgiu3Wpq88kB4zmRHgWO85d4bhmNBVbJCxOmbPzmcPRPtCcl7qK_wQVqHLTxFG5_RiLx2g__KHZgQtObUEx8ah749TnU3fq-4lDbaPeFUxQcFnnTt-B6JZ7YqSGQemE9mm57znHvi_bNYQwV_cXjSgF3-uM194WpuuCiOlml5HkRroEy_EHWKYE5A" />
+<link rel="stylesheet" media="all" href="/sites/gsa.gov/files/css/css_avXdaAPI1un9B5B5EVvAT1f9e7ZZkDKkjakHarbN3D4.css?delta=1&amp;language=en&amp;theme=gsa&amp;include=eJx9kVtyQiEMhjdEZUlMgIipcMKQHPW4-iJ4q53pCyQfufEngkKGDZv1eIATcRMjmygW60HQrHKOYsd5t2NbK2QTMohsM-huFxSBhGICN7QLtwKZrmiSgI1QnTYIR1rSALXRotiMcqXgas9zYRXlQldQ4kUsLaROQqOqIyNl9pC_JulNSrUFKCvv6fJeZs_cC9t5uUy-QdtMYk4ZnUKySctvF9Knv4NvuBjRPooohcevdy9iKjRIDerh-fgiu3Wpq88kB4zmRHgWO85d4bhmNBVbJCxOmbPzmcPRPtCcl7qK_wQVqHLTxFG5_RiLx2g__KHZgQtObUEx8ah749TnU3fq-4lDbaPeFUxQcFnnTt-B6JZ7YqSGQemE9mm57znHvi_bNYQwV_cXjSgF3-uM194WpuuCiOlml5HkRroEy_EHWKYE5A" />
+<link rel="stylesheet" media="print" href="/sites/gsa.gov/files/css/css_fKCRfIPjpSDHCPyw-OC_-IPeizZW5ymfB4w3FjPHIts.css?delta=2&amp;language=en&amp;theme=gsa&amp;include=eJx9kVtyQiEMhjdEZUlMgIipcMKQHPW4-iJ4q53pCyQfufEngkKGDZv1eIATcRMjmygW60HQrHKOYsd5t2NbK2QTMohsM-huFxSBhGICN7QLtwKZrmiSgI1QnTYIR1rSALXRotiMcqXgas9zYRXlQldQ4kUsLaROQqOqIyNl9pC_JulNSrUFKCvv6fJeZs_cC9t5uUy-QdtMYk4ZnUKySctvF9Knv4NvuBjRPooohcevdy9iKjRIDerh-fgiu3Wpq88kB4zmRHgWO85d4bhmNBVbJCxOmbPzmcPRPtCcl7qK_wQVqHLTxFG5_RiLx2g__KHZgQtObUEx8ah749TnU3fq-4lDbaPeFUxQcFnnTt-B6JZ7YqSGQemE9mm57znHvi_bNYQwV_cXjSgF3-uM194WpuuCiOlml5HkRroEy_EHWKYE5A" />
     <link rel="stylesheet" media="all" href="/sites/gsa.gov/files/css/css_j6RP_qa5twv-U89vhFCQsL0seEhYE80Tse4I0lnSXWQ.css">
 <!-- <link rel="stylesheet" media="all" href="https://www.gsa.gov/sites/gsa.gov/files/css/css_N3xpoCqrzEm-m5cwEESGoHJsdc-siJ669CrztUP1Oa4.css"> -->
 <link rel="stylesheet" media="all" href="https://www.gsa.gov/sites/gsa.gov/files/css/css_RIb-40SbIsncZrRVivduocSfJUTH6y_IT6lGgcQblUg.css" />
@@ -43,7 +46,7 @@
 
   <script type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=G-CSLL4ZEK4L"></script><meta http-equiv="origin-trial" content="AymqwRC7u88Y4JPvfIF2F37QKylC04248hLCdJAsh8xgOfe/dVJPV3XS3wLFca1ZMVOtnBfVjaCMTVudWM//5g4AAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1RoaXJkUGFydHkiOnRydWV9"><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/54/9/common.js"></script><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/54/9/util.js"></script><meta http-equiv="origin-trial" content="AymqwRC7u88Y4JPvfIF2F37QKylC04248hLCdJAsh8xgOfe/dVJPV3XS3wLFca1ZMVOtnBfVjaCMTVudWM//5g4AAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1RoaXJkUGFydHkiOnRydWV9"><meta http-equiv="origin-trial" content="AymqwRC7u88Y4JPvfIF2F37QKylC04248hLCdJAsh8xgOfe/dVJPV3XS3wLFca1ZMVOtnBfVjaCMTVudWM//5g4AAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1RoaXJkUGFydHkiOnRydWV9"></head>
 
-  <body class="no_dialog path-frontpage page-node-type-cmp-page uswds-gsa" "="">
+  <body class="no_dialog path-frontpage page-node-type-cmp-page uswds-gsa" id="body-menu" "="">
         <div class="skip-link__wrapper">
       <a href="#main-content" class="visually-hidden focusable skip-link">
         Skip to main content
@@ -107,7 +110,7 @@
 
 
 <header class="usa-header usa-header--extended" role="banner">
-  <div class="usa-overlay overlay-trigger"></div>
+  <div class="usa-overlay overlay-trigger" id="mob-trigger"></div>
       <div class="usa-navbar">
         <div class="region region-header">
     <div class="usa-logo">
@@ -124,8 +127,8 @@
 
     </div>
 
-    <nav aria-label="Primary navigation" class="usa-nav overlay-trigger" role="navigation">
-      <button class="gsa-menu-btn">Menu</button>
+    <nav aria-label="Primary navigation" class="usa-nav overlay-trigger" id="mob-trigger" role="navigation">
+      <button class="gsa-menu-btn" onclick="menuFunc()">Menu</button>
 
            <div class="usa-nav__inner">
         
@@ -2072,8 +2075,7 @@ head = document.getElementById("tech-btn").setAttribute("aria-expanded", ariaTog
   </div>
 
 </li>
-
-              <script type="text/javascript">
+<script type="text/javascript">
 
       function aboutFunction() {
 var buyThru = document.getElementById("ab-us").classList;
@@ -4746,29 +4748,32 @@ head = document.getElementById("ab-btn").setAttribute("aria-expanded", ariaToggl
 
           <section class="video-container"><div class="player-area" id="homepage-video">
     <video autoplay="" class="full-screen video mobile:display-none tablet:display-block" loop="" muted="" poster="/media/162538" preload="auto"><source media="all and (min-width: 413px)" src="https://www.gsa.gov/media/162532" type="video/mp4"></video><div class="main-heading">
-      <!-- <h1 class="text-shadow">Delivering effective and efficient government services for the American people
-      </h1> -->
-
+      <h1 class="text-shadow">Delivering effective and efficient government services for the American people
+      </h1>
       <div class="pointer-container">
-        <svg aria-hidden="true" class="usa-icon usa-icon--size-4" focusable="false" id="scrollto-categories" role="img"><use xlink:href="https://www.gsa.gov/sites/gsa.gov/templates/styles/dist/img/sprite.svg#arrow_downward"></use></svg></div>
+        <svg aria-hidden="true" class="usa-icon usa-icon--size-4" focusable="false" id="scrollto-categories" role="img"> 
+          <use xlink:href="https://www.gsa.gov/sites/gsa.gov/templates/styles/dist/img/sprite.svg#arrow_downward" xmlns:xlink="http://www.w3.org/1999/xlink"> 
+          </use> 
+        </svg>
+      </div>
     </div>
   </div>
 </section><section class="grid-container"><div class="container" id="page-content" role="main" tabindex="-1">
     <nav class="row-item" id="category-navigation"><picture class="inset usa-first usa-fill" id="usa-first_category"><div class="image-overlay usa-fill">&nbsp;
         </div>
-        <div class="bg-area usa-fill image-full" style="background-image: url(/media/162534);">&nbsp;
+        <div class="bg-area usa-fill image-full" style="background-image: url(https://www.gsa.gov/media/162534);">&nbsp;
         </div>
       </picture><picture class="inset usa-second usa-fill" id="usa-second_category"><div class="image-overlay usa-fill">&nbsp;
         </div>
-        <div class="bg-area usa-fill image-full" style="background-image: url(/media/162535);">&nbsp;
+        <div class="bg-area usa-fill image-full" style="background-image: url(https://www.gsa.gov/media/162535);">&nbsp;
         </div>
       </picture><picture class="inset usa-third usa-fill" id="usa-third_category"><div class="image-overlay usa-fill">&nbsp;
         </div>
-        <div class="bg-area usa-fill image-full" style="background-image: url(/media/162536);">&nbsp;
+        <div class="bg-area usa-fill image-full" style="background-image: url(https://www.gsa.gov/media/162536);">&nbsp;
         </div>
       </picture><picture class="inset usa-fourth usa-fill" id="usa-fourth_category"><div class="image-overlay usa-fill">&nbsp;
         </div>
-        <div class="bg-area usa-fill image-full" style="background-image: url(/media/162537);">&nbsp;
+        <div class="bg-area usa-fill image-full" style="background-image: url(https://www.gsa.gov/media/162537);">&nbsp;
         </div>
       </picture><ol class="usa-page_categories padding-0 margin-0 mask-images"><li class="usa-page_category_item" data-item="usa-first_category"><span></span><span> </span>
           <h2><a class="usa-fill outline-0" href="https://www.gsa.gov/real-estate">REAL ESTATE </a>
@@ -5902,9 +5907,10 @@ window.onclick = function(event) {
 
     
     <script type="application/json" data-drupal-selector="drupal-settings-json">{"path":{"baseUrl":"\/","scriptPath":null,"pathPrefix":"","currentPath":"node\/985","currentPathIsAdmin":false,"isFront":true,"currentLanguage":"en"},"pluralDelimiter":"\u0003","suppressDeprecationErrors":true,"dataLayer":{"defaultLang":"en","languages":{"en":{"id":"en","name":"English","direction":"ltr","weight":0}}},"gsa_domain":{"current":{"domain":"gsa.gov","id":"gsa_gov","env":"prod"},"preview_path":"https:\/\/preview.gsa.gov","cmp_path":"https:\/\/cmp.gsa.gov","public_path":"https:\/\/gsa.gov"},"values":{"label":"GSA"},"statistics":{"data":{"nid":"985"},"url":"\/core\/modules\/statistics\/statistics.php"},"perdiem_api_root":"https:\/\/api.gsa.gov\/travel\/perdiem\/v2\/rates","perdiem_first_year":"2021-10","perdiem_last_year":"2024-09","TBMegaMenu":{"TBElementsCounter":{"column":null},"theme":"gsa","tbm-main":{"arrows":"1"}},"user":{"uid":0,"permissionsHash":"d818c9b975abb4f243b2ba17e603eb0dd305c17f9ca8ae4f6c1384989df7ff7d"}}</script>
-<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_ez1S-Y-40FxsI8TIN0a9zDC58mwf3KGDqvpyQkbOe28.js"></script>
+<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_zsCEoSmwMM82RodAVozrwhHF7Mt56H_lsGsafcUG4vc.js"></script>
+<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_rQawNAJn4zfIqV8PWTa-UbYP6g5bVDgXYa9dsygqf_M.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpUY4dGa_KFp-Rf4oNtabKFZYs37KDizU&amp;amp;sensor=false"></script>
-<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_AhIU2qgRodMdEa0Lieu5eimPTOUhMuuBP_E7tOeUusA.js"></script>
+<script src="https://www.gsa.gov/sites/gsa.gov/files/js/js_V7GAAFyPhJCqqgyePoTbSmjqLqyCZgIfQ_bfYjXkj38.js"></script>
 
     <!--BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
     <script type="text/javascript">
